fix SEMP version for vmr

--- a/scripts/ansible/ConfigNoShutMessageSpoolSEMPv1.yml
+++ b/scripts/ansible/ConfigNoShutMessageSpoolSEMPv1.yml
@@ -14,8 +14,8 @@
          method:           GET
          user:             "{{ ANSIBLE_USERNAME }}"
          password:         "{{ ANSIBLE_PASSWORD }}"
-         body:             "<rpc semp-version='soltr/8_2'>\
-                           <hardware><message-spool><no><shutdown><{{ VMR_ROLE }}/></shutdown></no></message-spool></hardware></rpc>"
+         body:             "<rpc semp-version='soltr/8_2VMR'>\
+                           <hardware><message-spool><no><shutdown><{{ ROLE }}/></shutdown></no></message-spool></hardware></rpc>"
          force_basic_auth: yes
          status_code:      200
          body_format:      raw
@@ -32,7 +32,7 @@
          method:           GET
          user:             "{{ ANSIBLE_USERNAME }}"
          password:         "{{ ANSIBLE_PASSWORD }}"
-         body:             "<rpc semp-version='soltr/8_2'>\
+         body:             "<rpc semp-version='soltr/8_2VMR'>\
                            <service><mate-link><no><shutdown/></no></mate-link></service></rpc>"
          force_basic_auth: yes
          status_code:      200
