--- a/scripts/ansible/ConfigShutMessageSpoolSEMPv1.yml
+++ b/scripts/ansible/ConfigShutMessageSpoolSEMPv1.yml
@@ -9,7 +9,7 @@
          method:           GET
          user:             "{{ ANSIBLE_USERNAME }}"
          password:         "{{ ANSIBLE_PASSWORD }}"
-         body:             "<rpc semp-version='soltr/8_2'>\
+         body:             "<rpc semp-version='soltr/8_2VMR'>\
                            <hardware><message-spool><shutdown><undefined/></shutdown></message-spool></hardware></rpc>"
          force_basic_auth: yes
          status_code:      200
