--- a/templates/solace-aws-master.template
+++ b/templates/solace-aws-master.template
@@ -234,7 +234,7 @@
         "VPCCIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
-            "Default": "10.0.128.0/20",
+            "Default": "10.0.128.0/22",
             "Description": "CIDR Block for the VPC",
             "Type": "String"
         },
@@ -476,6 +476,9 @@
                     "SSHAccessCIDR": {
                         "Ref": "SSHAccessCIDR"
                     },
+                    "VPCCIDR": {
+                        "Ref": "VPCCIDR"
+                    }
                     "SubnetID": {
                         "Fn::Join": [
                             ",",
