VPC Cidr, split out redndancty no shut, sleep after flip to monitor node

--- a/templates/solace-aws.template
+++ b/templates/solace-aws.template
@@ -20,7 +20,7 @@
                     "Parameters": [
                         "VPCID",
                         "SubnetID",
-                        "VPCCIRD",
+                        "VPCCIDR",
                         "RemoteAccessCIDR",
                         "SSHAccessCIDR"
                     ]
