--- a/templates/solace-aws-master.template
+++ b/templates/solace-aws-master.template
@@ -477,7 +477,10 @@
                         "Ref": "SSHAccessCIDR"
                     },
                     "VPCCIDR": {
-                        "Ref": "VPCCIDR"
+                        "Fn::GetAtt": [
+                            "VPCStack",
+                            "Outputs.VPCCIDR"
+                        ]
                     },
                     "SubnetID": {
                         "Fn::Join": [
