--- a/templates/solace-aws-master.template
+++ b/templates/solace-aws-master.template
@@ -19,6 +19,7 @@
                     },
                     "Parameters": [
                         "AvailabilityZones",
+                        "NumberOfAZs",
                         "VPCCIDR",
                         "PublicSubnet1CIDR",
                         "PublicSubnet2CIDR",
@@ -76,6 +77,9 @@
                 }, 
                 "AvailabilityZones": {
                     "default": "Availability Zones"
+                },
+                "NumberOfAZs": {
+                    "default": "3"
                 },
                 "BootDiskSize": {
                     "default": "Boot Disk Capacity (GiB)"
@@ -143,6 +147,14 @@
         "AvailabilityZones": {
             "Description": "List of Availability Zones to use for the subnets in the VPC. Note: The logical order is preserved exctly 3 AZs are used for this deployment.",
             "Type": "List<AWS::EC2::AvailabilityZone::Name>"
+        },
+        "NumberOfAZs": {
+            "ConstraintDescription": "3 means each node in own az, 2 puts monitor and backup in one az",
+            "Default": "3",
+            "Description": "Number of availability zones to use",
+            "MaxValue": "3",
+            "MinValue": "2",
+            "Type": "Number"
         },
         "BootDiskSize": {
             "ConstraintDescription": "Deployment supports 8 to 128 GB for boot volumes",
@@ -392,7 +404,9 @@
                     "KeyPairName": {
                         "Ref": "KeyPairName"
                     },
-                    "NumberOfAZs": "3",
+                    "NumberOfAZs": {
+                        "Ref": "NumberOfAZs"
+                    },
                     "PublicSubnet1CIDR": {
                         "Ref": "PublicSubnet1CIDR"
                     },
@@ -442,6 +456,9 @@
                     },
                     "AdminPassword": {
                         "Ref": "AdminPassword"
+                    },
+                    "NumberOfAZs": {
+                        "Ref": "NumberOfAZs"
                     },
                     "BootDiskSize": {
                         "Ref": "BootDiskSize"
